unpackaged/main/default/objects/nbavs__CallReporting__c/nbavs__CallReporting__c.object-meta.xml
<CustomObject>
    <label>Call Reporting</label>
    <nameField>
        <displayFormat>CR-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>