unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Account__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Call_Account</relationshipName>
    <type>Lookup</type>
</CustomField>