unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Call_Bridge_Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Call_Bridge_Time__c</fullName>
    <description>The UTC time that this call / conversation was connected</description>
    <label>Conversation Bridge Time</label>
    <type>DateTime</type>
</CustomField>