unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Call_Reporting__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Call_Reporting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field that represents a parent-child relationship to itself. Subsequent callbacks will be children of the original call CRO record.</description>
    <label>Call Reporting</label>
    <referenceTo>nbavs__CallReporting__c</referenceTo>
    <relationshipLabel>Call Reporting Callbacks</relationshipLabel>
    <relationshipName>Call_Reporting</relationshipName>
    <type>Lookup</type>
</CustomField>