unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Callback_Parent_UUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Callback_Parent_UUID__c</fullName>
    <description>If present and set to a non empty value, then will indicate the call that was queued and for which a callback was requested. The UUID may relate to either the A or B Leg UUID, but will normally be the A Leg. If value is empty, then the record is not a call back attempt.</description>
    <label>Callback Parent UUID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>