unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Case__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>CaseCallReportings</relationshipName>
    <type>Lookup</type>
</CustomField>