unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Contact__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Call_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>