unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Day__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Day__c</fullName>
    <description>Day of the month call started</description>
    <formula>DAY(DATEVALUE(nbavs__From_Start_Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Day of the month call started</inlineHelpText>
    <label>Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>