unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Day_Of_Week_Numeric__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Day_Of_Week_Numeric__c</fullName>
    <description>Numeric representation of day of week starting at 0 for Sunday</description>
    <formula>MOD(DATEVALUE(nbavs__From_Start_Time__c) - DATE(1900, 1, 7), 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Numeric representation of day of week starting at 0 for Sunday</inlineHelpText>
    <label>Day Of Week Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>