unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__Dialler_Object__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Dialler_Object__c</fullName>
    <description>Object that the dialler originated the call from.</description>
    <formula>IF(ISBLANK(nbavs__DiallerObjectId__c),NULL,HYPERLINK(&#39;/&#39; + nbavs__DiallerObjectId__c, nbavs__DiallerObjectName__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dialler Item</label>
    <type>Text</type>
</CustomField>