unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__DiallerListId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DiallerListId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Id of the dialler list the call was originated from.</description>
    <label>Dialler List</label>
    <referenceTo>nbavs__DialList__c</referenceTo>
    <relationshipName>CRO_Dial_List2</relationshipName>
    <type>Lookup</type>
</CustomField>