unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__DiallerListName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DiallerListName__c</fullName>
    <description>The name of the dialler list the call was originated from.</description>
    <label>Dialler List Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>