unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__DiallerObjectId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DiallerObjectId__c</fullName>
    <description>The Salesforce id of the object that the dialler originated the call from.</description>
    <externalId>true</externalId>
    <label>Dialler Item Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>