unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__DiallerObjectName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DiallerObjectName__c</fullName>
    <description>The name of the object that the dialler originated the call from.</description>
    <label>Dialler Object Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>