unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Archive_Personal_Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Archive_Personal_Policy_Id__c</fullName>
    <description>The personal archiving policy Id of a recording associated with the From leg. If Id is 0, then no recording has been made</description>
    <label>From Archive Personal Policy Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>