unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_AVS_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_AVS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Natterbox User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipName>From_AVSUser</relationshipName>
    <type>Lookup</type>
</CustomField>