unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Call_Analytics__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Call_Analytics__c</fullName>
    <formula>IF(AND(nbavs__From_Flag_Record__c,nbavs__From_Flag_Analytics__c), HYPERLINK(&#39;/apex/nbavs__telemetry?callReportingId=&#39;+Id+&#39;&amp;from&#39;, IMAGE(&quot;/resource/nbavs__playbuttons/TelemetryOn.png&quot;, &quot;Call Analysis&quot;)), IMAGE(&quot;/resource/nbavs__playbuttons/TelemetryOff.png&quot;, &quot;No Recording was made&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Call Analytics</label>
    <type>Text</type>
</CustomField>