unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Call_Queue_Last_Queue__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Call_Queue_Last_Queue__c</fullName>
    <description>The Queue Id of the last call queue that was used on this channel</description>
    <label>From Call Queue Last Queue Ref</label>
    <length>32</length>
    <type>Text</type>
</CustomField>