unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Call_Queue_Total_Wait_Seconds__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Call_Queue_Total_Wait_Seconds__c</fullName>
    <description>The duration of time in seconds that the From leg spent waiting to be connected to an agent in all call queues</description>
    <label>From Call Queue Total Wait Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>