unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Call_Type_Report__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Call_Type_Report__c</fullName>
    <formula>TEXT(nbavs__From_Call_Type__c)</formula>
    <label>From Call Type Report</label>
    <type>Text</type>
</CustomField>