unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Callback_Rejected_State__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Callback_Rejected_State__c</fullName>
    <description>Will be empty if there is no Rejected State or one of the following values:
Playing CallBack Announcement - the agent hung up the call whilst hearing the initial announcement this is a call back
Playing CallBack Voicemail - the agent hung up the call whilst hearing the voicemail recorded by the caller
Ringing Caller - the agent hung up the call whilst waiting for the call to connect to the caller
Unknown - added as a catch all case</description>
    <label>From Callback Rejected State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Playing CallBack Announcement</fullName>
            </value>
            <value>
                <fullName>Playing CallBack Voicemail</fullName>
            </value>
            <value>
                <fullName>Ringing Caller</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>