unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Channel_Duration__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Channel_Duration__c</fullName>
    <description>The duration is seconds measured from when the leg was really answered to when it ended. Note that, if the call is transferred then the duration always refers to the total connect time for the From Party and not for the individual interactions.</description>
    <label>From Channel Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>