unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Channel_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Channel_Start_Time__c</fullName>
    <description>The actual start time of the physical call regardless of how many times the From leg has been transferred</description>
    <label>From Channel Start Time</label>
    <type>DateTime</type>
</CustomField>