unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Conversation_Instance__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Conversation_Instance__c</fullName>
    <formula>nbavs__From_Instance__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Conversation Instance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>