unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Device_Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Device_Id__c</fullName>
    <description>The SIP Device Id associated with the From leg of the call</description>
    <label>From Device Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>