unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Dialled_Number__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Dialled_Number__c</fullName>
    <description>The number that was dialed by the From party. Note that this isn&#39;t necessarily the number that was connected</description>
    <label>From Dialled Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>