unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_End_Time__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_End_Time__c</fullName>
    <description>The end time for this interaction. For the last instance, this will be the time the call really hangs up. For all other instances, will be the time the call is bridged to the next party</description>
    <label>Conversation End Time</label>
    <type>DateTime</type>
</CustomField>