unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Flag_Active_Record_Stream_Fail__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Flag_Active_Record_Stream_Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg is an active record channel which has been streamed and failed to complete</description>
    <label>From Flag Active Record Stream Fail</label>
    <type>Checkbox</type>
</CustomField>