unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Flag_Agent_Hangup__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Flag_Agent_Hangup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A boolean value indicating whether the Agent hung up the call. This is only relevant when the From Leg has a non 0 fromUserId value associated with it</description>
    <label>From Flag Agent Hangup</label>
    <type>Checkbox</type>
</CustomField>