unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Flag_Alert__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Flag_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Possible problem with the call. Refer to event logs, etc</description>
    <label>From Flag Alert</label>
    <type>Checkbox</type>
</CustomField>