unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Flag_Attended_Transfer__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Flag_Attended_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Call leg invoked an Attended Transfer</description>
    <label>From Flag Attended Transfer</label>
    <type>Checkbox</type>
</CustomField>