unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Flag_CallBack_Caller__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Flag_CallBack_Caller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Flag Callback Caller</label>
    <type>Checkbox</type>
</CustomField>