unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Flag_Caller_Id_Withheld__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Flag_Caller_Id_Withheld__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg had the Caller Id withheld when call was made</description>
    <label>From Flag Caller Id Withheld</label>
    <type>Checkbox</type>
</CustomField>