unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Flag_Eavesdrop__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Flag_Eavesdrop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg was attached to another call to perform an eavesdrop</description>
    <label>From Flag Eavesdrop</label>
    <type>Checkbox</type>
</CustomField>