unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Flag_Eavesdrop_Attached__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Flag_Eavesdrop_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg was attached to, by another eavesdrop channel</description>
    <label>From Flag Eavesdrop Attached</label>
    <type>Checkbox</type>
</CustomField>