unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Flag_Picked_Off__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Flag_Picked_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The other leg of this call was intercepted via a pickup from another channel</description>
    <label>From Flag Picked Off</label>
    <type>Checkbox</type>
</CustomField>