unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Flag_Record__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Flag_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>There are one or more recordings associated with the leg</description>
    <label>From Flag Record</label>
    <type>Checkbox</type>
</CustomField>