unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Flag_Transfer__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Flag_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Leg was involved in a transfer</description>
    <label>From Flag Transfer</label>
    <type>Checkbox</type>
</CustomField>