unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Flag_Virtual_Channel__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Flag_Virtual_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Flag Virtual Channel</label>
    <type>Checkbox</type>
</CustomField>