unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Group__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Group</label>
    <referenceTo>nbavs__Group__c</referenceTo>
    <relationshipLabel>Call Reporting</relationshipLabel>
    <relationshipName>Call_Reporting</relationshipName>
    <type>Lookup</type>
</CustomField>