unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Hangup_Cause__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Hangup_Cause__c</fullName>
    <description>The hangup cause on the From leg</description>
    <label>From Hangup Cause</label>
    <length>32</length>
    <type>Text</type>
</CustomField>