unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Instance_Count__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Instance_Count__c</fullName>
    <description>The number of dialogues that the From Leg has taken part in</description>
    <label>From Conversation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>