unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Last_Queue__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Last_Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Call Queue Last Queue</label>
    <referenceTo>nbavs__Call_Queue__c</referenceTo>
    <relationshipLabel>Call Reporting (From Call Queue Last Queue)</relationshipLabel>
    <relationshipName>Call_Reporting1</relationshipName>
    <type>Lookup</type>
</CustomField>