unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Number__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Number__c</fullName>
    <description>The number that that the call was originated from which has been normalised according to Natterbox normalisation rules</description>
    <label>From Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>