unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Policy_Start_Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Policy_Start_Id__c</fullName>
    <defaultValue>0</defaultValue>
    <label>From Policy Start Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>