unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Policy_Start_Name__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Policy_Start_Name__c</fullName>
    <label>From Policy Start Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>