unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Recording__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Recording__c</fullName>
    <formula>IF(nbavs__From_Flag_Record__c, HYPERLINK(&#39;/apex/nbavs__playrecording?callReportingId=&#39;+Id+&#39;&amp;from&#39;, IMAGE(&quot;/resource/nbavs__playbuttons/PlayOn.png&quot;, &quot;Play&quot;)), IMAGE(&quot;/resource/nbavs__playbuttons/PlayOff.png&quot;, &quot;No Recording was made&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Recording</label>
    <type>Text</type>
</CustomField>