unpackaged/main/default/objects/nbavs__CallReporting__c/fields/nbavs__From_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From_Recording_URL__c</fullName>
    <label>From Recording URL</label>
    <type>Url</type>
</CustomField>